Fixed bug issue with refreshing page with no magnets

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<!-- <link type="text/css" href="css/themename/jquery-ui-1.7.1.custom.css" rel="Stylesheet"/> -->
+	
 	<meta charset="utf-8">
 	<title>The Fridge</title>
 	<link rel="stylesheet" type="text/css" href="fridge.css">
@@ -34,7 +34,7 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jqueryUI.js"></script>
 	<script type="text/javascript" src="js/draggable.js"></script>
-	<script type="text/javascript" src="js/newbutton.js"></script>
+	<script type="text/javascript" src="js/inputs.js"></script>
 	<script type="text/javascript" src="js/statesaving.js"></script>
 
 
